--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,21 @@
-# Use the official Node.js image.
-FROM node:lts-alpine
+#Use the official Node.js 18 image as base
+FROM node:18
 
-# Set the working directory.
-WORKDIR /backend/src
+# Set the working directory for the backend
+WORKDIR /usr/src/backend
 
-# Copy the package.json and package-lock.json files.
+# Copy package.json and package-lock.json (if available)
 COPY package*.json ./
 
-# Install dependencies.
+# Install dependencies
 RUN npm install
 
-# Copy the rest of the application code.
+# Copy the rest of the backend application
 COPY . .
 
-# Expose the port the app runs on.
-EXPOSE 3000
+# Expose port  to the outside world
+EXPOSE 3001
 
-# Define the command to run the application.
-CMD ["node", "server.js"]
+
+# Command to run the backend application
+CMD ["npm", "run", "server"]
